hover effect for links

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,6 @@
   </head>
   <body class="page">
     <div class="upward"></div>
-    <div class="overlay"></div>
 
     <header class="header" id="home">
       <nav class="hamburger">
@@ -272,11 +271,11 @@
         <div class="logo contact-us__logo"></div>
         <div class="socials contact-us__socials">
           <a href="https://www.facebook.com/"
-            class="socials__fb"
+            class="socials socials__fb"
             target="_blank">
           </a>
           <a href="https://www.instagram.com/"
-            class="socials__insta"
+            class="socials socials__insta"
             target="_blank">
           </a>
         </div>
@@ -328,11 +327,27 @@
         </div>
 
         <nav class="links contact-us__links">
-          <ul class="links__list">
-            <li class="links__item"><a href="#gallery" class="links__link">Галерея</a></li>
-            <li class="links__item"><a href="#home" class="links__link">Про Hac</a></li>
-            <li class="links__item"><a href="#events" class="links__link">Виставки та події</a></li>
-            <li class="links__item"><a href="#contact-us" class="links__link">Контакти</a></li>
+          <ul class="links links__list">
+            <li class="links links__item">
+              <a href="#gallery" class="links links__link">
+                Галерея
+              </a>
+            </li>
+            <li class="links links__item">
+              <a href="#home" class="links links__link">
+                Про Hac
+              </a>
+            </li>
+            <li class="links links__item">
+              <a href="#events" class="links links__link">
+                Виставки та події
+              </a>
+            </li>
+            <li class="links links__item">
+              <a href="#contact-us" class="links links__link">
+                Контакти
+              </a>
+            </li>
           </ul>
         </nav>
       </section>
@@ -342,6 +357,8 @@
       <p class="footer__text">Designed by Zhyriada Marina</p>
       <p class="footer__text">Copyright © 2019. All Rights Reserved.</p>
     </footer>
+
+    <div class="overlay"></div>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
