add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -52,20 +52,20 @@
       <div class="menu__top-bar">
         <a href="#" class="menu__close-icon icons"></a>
         <div class="menu__elements">
-          <span class="menu__text">
+          <a href="#gallery" class="menu__text">
             Галерея
-          </span>
-          <span class="menu__text">
+          </a>
+          <a href="#relevant" class="menu__text">
             Виставки та події
-          </span>
+          </a>
         </div>
         <div class="menu__elements">
-          <span class="menu__text">
+          <a href="subscribe" class="menu__text">
             Про Нас
-          </span>
-          <span class="menu__text">
+          </a>
+          <a href="#footer" class="menu__text">
             Контакти
-          </span>
+          </a>
         </div>
       </div>
       <div class="menu__bottom">
@@ -91,7 +91,7 @@
     </aside>
 
     <main class="main">
-      <section class="section relevant">
+      <section class="section relevant" id="relevant">
         <h1 class="relevant__title">Актуальні події</h1>
         <article class="relevant__wrap">
           <div class="relevant__image"></div>
@@ -128,14 +128,38 @@
           </div>
         </div>
       </section>
-      <section class="section gallery">
+      <section class="section gallery" id="gallery">
         <h1 class="gallery__title">Галерея</h1>
         <div class="gallery__slider">
-          <img
-            src="./images/gallery-image.svg"
-            alt="slider-image"
-            class="gallery__image"
-          >
+          <div class="gallery__images">
+            <img
+              src="./images/gallery-image.svg"
+              alt="slider-image"
+              class="gallery__image"
+            >
+            <img
+              src="./images/gallery-second.svg"
+              alt="gallery"
+              class="gallery__image hidden"
+            >
+            <img
+              src="./images/gallery-fourth.svg"
+              alt="fourth"
+              class="gallery-image__four"
+            >
+          </div>
+          <div class="gallery__images-desktop">
+            <img
+              src="./images/gallery-third.svg"
+              alt="slider-image"
+              class="gallery__image__third"
+            >
+            <img
+              src="./images/gallery-fives.svg"
+              alt="gallery"
+              class="gallery__image__five"
+            >
+          </div>
           <div class="gallery__dots">
             <div class="gallery__dot active"></div>
             <div class="gallery__dot"></div>
@@ -144,7 +168,7 @@
           </div>
         </div>
       </section>
-      <section class="section subscribe">
+      <section class="section subscribe" id="subscribe">
         <div class="subscribe__wrap">
           <h1 class="subscribe__title">Підписка</h1>
           <span class="subscribe__subtitle">Бути в курсі всіх актуальних подій та останніх новин.</span>
@@ -172,12 +196,22 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer" id="footer">
       <div class="footer__top">
         <div class="footer__top-logo"></div>
         <div class="footer__icons">
-          <div class="footer__facebook icons"></div>
-          <div class="footer__instagram icons"></div>
+          <a
+            href="https://www.facebook.com/"
+            class="footer__facebook icons"
+            target="_blank"
+          >
+          </a>
+          <a
+            href="https://www.instagram.com/"
+            class="footer__instagram icons"
+            target="_blank"
+          >
+          </a>
         </div>
       </div>
       <div class="footer__average">
@@ -220,20 +254,20 @@
       <div class="footer__bottom">
         <div class="footer__wrap">
           <div class="footer__menu__elements first">
-            <span class="footer__menu__text">
+            <a href="#gallery" class="footer__menu__text">
               Галерея
-            </span>
-            <span class="footer__menu__text">
+            </a>
+            <a href="#relevant" class="footer__menu__text">
               Виставки та події
-            </span>
+            </a>
           </div>
           <div class="footer__menu__elements second">
-            <span class="footer__menu__text">
+            <a href="#subscribe" class="footer__menu__text">
               Про Нас
-            </span>
-            <span class="footer__menu__text">
+            </a>
+            <a href="#footer" class="footer__menu__text">
               Контакти
-            </span>
+            </a>
           </div>
         </div>
       </div>
