--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Montserrat:wght@400;700&family=Roboto:wght@400;500&family=Space+Grotesk:wght@700&family=Space+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;500&family=Space+Grotesk:wght@700&family=Space+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   </head>
   <body class="page">
@@ -116,6 +118,7 @@
         <img src="./images/events/events_image1.jpg"
           alt="events-image"
           class="picture events__picture"
+          data-aos="fade-up"
         >
 
         <div class="events__content">
@@ -135,6 +138,7 @@
           src="./images/events/events_image2.jpg"
           alt="events-image"
           class="picture events__picture"
+          data-aos="fade-up"
         >
 
         <div class="events__content">
@@ -361,5 +365,8 @@
     <div class="overlay"></div>
 
     <script type="text/javascript" src="scripts/main.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
