--- a/src/index.html
+++ b/src/index.html
@@ -22,21 +22,17 @@
       </a>
       <div class="header__logo">
         <a href="#home" class="header__logo-link"></a>
-        <img
-          src="./images/icons/witch-of-mountain-winds.svg"
-          alt="witch-of-mountain-winds.svg"
-          class="header__logo-text"
-        >
+        <p class="header__logo-text">witch of mountain winds</p>
       </div>
       <nav class="nav header__nav">
         <ul class="nav__list header__list">
           <li class="nav__item header__item">
             <a href="#shop" class="nav__link header__link">shop</a>
           </li>
-          <li class="nav__item">
+          <li class="nav__item header__item">
             <a href="#contact" class="nav__link header__link">contact</a>
           </li>
-          <li class="nav__item">
+          <li class="nav__item header__item">
             <a href="#about" class="nav__link header__link">about</a>
           </li>
         </ul>
