finished events section

--- a/src/index.html
+++ b/src/index.html
@@ -153,6 +153,21 @@
           </div>
         </div>
       </div>
+
+      <div class="events-lection">
+        <img
+          src="./images/events-card-3.png"
+          alt="events lection"
+          class="events-lection__img"
+        >
+        <div class="events-lection__box">
+          <div class="events-lection__head">
+            <h3 class="events-lection__subtitle">ЛЕКЦІЯ</h3>
+            <p class="events-lection__date">26/08/2019 - 11:00</p>
+          </div>
+          <h2 class="events-lection__title">Від класицизму до романтизму</h2>
+        </div>
+      </div>
     </section>
     <!-- #Events -->
     <script type="text/javascript" src="scripts/main.js"></script>
