--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8">
     <title>Art Museum Header</title>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
       rel="icon"
@@ -34,15 +33,13 @@
           <div class="header__tickets">
             <span class="header__tickets-text">Квитки</span>
           </div>
-          <button class="header__button">
-            <a href="#" class="header__button-text">
-              <img
-                src="./images/icons/header-arrow-right.svg"
-                alt="arrow"
-                class="header__image"
-              >
-            </a>
-          </button>
+          <a href="#relevant" class="header__button">
+            <img
+              src="./images/icons/header-arrow-right.svg"
+              alt="arrow"
+              class="header__image"
+            >
+          </a>
         </div>
       </div>
 
@@ -95,22 +92,26 @@
         <h1 class="relevant__title">Актуальні події</h1>
         <article class="relevant__wrap">
           <div class="relevant__image"></div>
-          <div class="relevant__mixed">
-            <span class="relevant__mixed-type">ВИСТАВКА</span>
-            <span class="relevant__mixed-data">26.08-29.11.2019</span>
+          <div class="article__wrap">
+            <div class="relevant__mixed">
+              <span class="relevant__mixed-type">ВИСТАВКА</span>
+              <span class="relevant__mixed-data">26.08-29.11.2019</span>
+            </div>
+            <span class="relevant__subtitle-first relevant__subtitle">Йду і повертаюсь</span>
+            <p class="relevant__main-text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
           </div>
-          <span class="relevant__subtitle-first relevant__subtitle">Йду і повертаюсь</span>
-          <p class="relevant__main-text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
         </article>
 
         <article class="relevant__wrap">
           <div class="relevant__image relevant__image-second"></div>
-          <div class="relevant__mixed">
-            <span class="relevant__mixed-type">ВИСТАВКА</span>
-            <span class="relevant__mixed-data">26.08-29.11.2019</span>
+          <div class="article__wrap">
+            <div class="relevant__mixed">
+              <span class="relevant__mixed-type">ВИСТАВКА</span>
+              <span class="relevant__mixed-data">26.08-29.11.2019</span>
+            </div>
+            <span class="relevant__subtitle-second relevant__subtitle">І спогади і мрії</span>
+            <p class="relevant__main-text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
           </div>
-          <span class="relevant__subtitle-second relevant__subtitle">І спогади і мрії</span>
-          <p class="relevant__main-text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
         </article>
 
         <div class="relevant__last">
@@ -237,10 +238,33 @@
         <div class="footer__contact-us">
           <span class="footer__schedule-title">Контакти:</span>
           <span class="footer__schedule-info">
-            вул. М. Грушевського, 6; Київ, 01001
-            тел. +38 (044) 278-13-57
-            факс +38 (044) 278-74-54
-            e-mail: info@namu.kiev.ua
+            <a
+              href="https://www.google.com.ua/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@51.3994665,26.8999388,6z/data=!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?entry=ttu"
+              class="footer__schedule-text"
+              target="_blank"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+            <br>
+            <a
+              href="tel:0442781357"
+              class="footer__schedule-text"
+            >
+              тел. +38 (044) 278-13-57
+            </a> <br>
+            <a
+              href="tel:0442787454"
+              class="footer__schedule-text"
+            >
+              факс +38 (044) 278-74-54
+            </a> <br>
+            <a
+              href="mailto: info@namu.kiev.ua"
+              class="footer__schedule-text"
+              target="_blank"
+            >
+              e-mail: info@namu.kiev.ua
+            </a>
           </span>
         </div>
         <a href="#" class="footer__btn-to-top">
