--- a/src/index.html
+++ b/src/index.html
@@ -136,7 +136,7 @@
             <img
               src="./images/gallery-image.svg"
               alt="slider-image"
-              class="gallery__image"
+              class="gallery__image first__image"
             >
             <img
               src="./images/gallery-second.svg"
