add new solution

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
       <div class="top-bar__wrap">
         <div class="top-bar">
           <a href="#menu" class="topbar__icon-menu icons mobile-show"></a>
-          <div class="top-bar__logo"></div>
+          <a href="#" class="top-bar__logo"></a>
         </div>
       </div>
       <div class="header__bottom">
@@ -199,7 +199,7 @@
 
     <footer class="footer" id="footer">
       <div class="footer__top">
-        <div class="footer__top-logo"></div>
+        <a href="#" class="footer__top-logo"></a>
         <div class="footer__icons">
           <a
             href="https://www.facebook.com/"
@@ -297,7 +297,7 @@
       </div>
       <div class="footer__end">
         <span class="footer__end-text footer__end-text-first">Designed by Zhyriada Marina</span>
-        <span class="footer__end-text footer__end-text-second">Copyright © 2019. All Rights Reserved.</span>
+        <span class="footer__end-text footer__end-text-second">Copyright © 2023. All Rights Reserved.</span>
       </div>
     </footer>
 
