add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
           </a>
         </div>
         <div class="menu__elements">
-          <a href="subscribe" class="menu__text">
+          <a href="#subscribe" class="menu__text">
             Про Нас
           </a>
           <a href="#footer" class="menu__text">
