--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,8 @@
 
     <header class="header" id="home">
       <nav class="hamburger">
-        <a class="menuIcon icon icon__menu" onclick="on()"></a>
-        <a class="closeIcon icon icon__cross" onclick="off()"></a>
+        <a class="menuIcon icon icon__menu"></a>
+        <a class="closeIcon icon icon__cross"></a>
       </nav>
 
       <div class="header__background">
@@ -115,7 +115,8 @@
           Актуальні події
         </h2>
 
-        <img src="./images/events/events_image1.jpg"
+        <img
+          src="./images/events/events_image1.jpg"
           alt="events-image"
           class="picture events__picture"
           data-aos="fade-up"
@@ -173,32 +174,36 @@
         </h2>
 
         <div class="gallery container-gallery">
-          <img src="./images/gallery/gallery_image1.jpg"
+          <img
+            src="./images/gallery/gallery_image1.jpg"
             alt="gallery-image"
             class="gallery-desktop
-            gallery-desktop__image
-            gallery-desktop__image--1"
+              gallery-desktop__image
+              gallery-desktop__image--1"
           >
 
-          <img src="./images/gallery/gallery_image2.jpg"
+          <img
+            src="./images/gallery/gallery_image2.jpg"
             alt="gallery-image"
             class="gallery-desktop
-            gallery-desktop__image
-            gallery-desktop__image--2"
+              gallery-desktop__image
+              gallery-desktop__image--2"
           >
 
-          <img src="./images/gallery/gallery_image3.jpg"
+          <img
+            src="./images/gallery/gallery_image3.jpg"
             alt="gallery-image"
             class="gallery-desktop
-            gallery-desktop__image
-            gallery-desktop__image--3"
+              gallery-desktop__image
+              gallery-desktop__image--3"
           >
 
-          <img src="./images/gallery/gallery_image4.jpg"
+          <img
+            src="./images/gallery/gallery_image4.jpg"
             alt="gallery-image"
             class="gallery-desktop
-            gallery-desktop__image
-            gallery-desktop__image--4"
+              gallery-desktop__image
+              gallery-desktop__image--4"
           >
         </div>
 
@@ -263,7 +268,9 @@
               required
             >
             <button
-              class="button button__arrow button__arrow--red"
+              class="button
+                button__arrow
+                button__arrow--red"
               type="submit"
               id="submit"
             ></button>
@@ -273,16 +280,23 @@
 
       <section class="contact-us" id="contact-us">
         <div class="logo contact-us__logo"></div>
+
         <div class="socials contact-us__socials">
-          <a href="https://www.facebook.com/"
+          <a
+            href="https://www.facebook.com/"
             class="socials socials__fb"
-            target="_blank">
+            target="_blank"
+          >
           </a>
-          <a href="https://www.instagram.com/"
+
+          <a
+            href="https://www.instagram.com/"
             class="socials socials__insta"
-            target="_blank">
+            target="_blank"
+          >
           </a>
         </div>
+
         <div class="opening contact-us__opening">
           <h4 class="title title__fourth">Графік роботи</h4>
 
@@ -293,10 +307,10 @@
             <p><span class="opening--hour">11:00 — 19:00</span> субота</p>
             <p><span class="opening--hour">11:00 — 19:00</span> неділя</p>
             <br>
-            Вихідні понеділок, вівторок
+              Вихідні понеділок, вівторок
             <br>
-            Kaca припиняє роботу за 1 годину
-            до закриття музею
+              Kaca припиняє роботу за 1 годину
+              до закриття музею
           </article>
         </div>
 
@@ -305,23 +319,31 @@
             Контакти:
           </p>
 
-          <a href="#"
-            class="address address__address">
+          <a
+            href="#"
+            class="address address__address"
+          >
             вул. M. Грушевського, 6; Київ, 01001
           </a>
 
-          <a href="tel:+38(044)-278-13-57"
-            class="address address__phone">
+          <a
+            href="tel:+38(044)-278-13-57"
+            class="address address__phone"
+          >
             тел. +38 (044) 278-13-57
           </a>
 
-          <a href="#"
-            class="address address__fax">
+          <a
+            href="#"
+            class="address address__fax"
+          >
             факс +38 (044)<span class="address__fax--br"> 278-74-54</span>
           </a>
 
-          <a href="mailto:info@namu.kiev.ua"
-            class="address address__email">
+          <a
+            href="mailto:info@namu.kiev.ua"
+            class="address address__email"
+          >
             e-mail: info@namu.kiev.ua
           </a>
         </address>
@@ -358,15 +380,24 @@
     </main>
 
     <footer class="footer">
-      <p class="footer__text">Designed by Zhyriada Marina</p>
-      <p class="footer__text">Copyright © 2019. All Rights Reserved.</p>
+      <p class="footer__text">
+        Designed by Zhyriada Marina
+      </p>
+
+      <p class="footer__text">
+        Copyright © 2019. All Rights Reserved.
+      </p>
     </footer>
 
     <div class="overlay"></div>
 
     <script type="text/javascript" src="scripts/main.js"></script>
+
     <script>
-      AOS.init();
+      AOS.init({
+        once: true,
+        }
+      );
     </script>
   </body>
 </html>
