little fix gallery

--- a/src/index.html
+++ b/src/index.html
@@ -173,7 +173,7 @@
           Галерея
         </h2>
 
-        <div class="gallery container-gallery">
+        <div class="gallery container-gallery gallery-desktop">
           <img
             src="./images/gallery/gallery_image1.jpg"
             alt="gallery-image"
