--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,38 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Національний художній музей України (НХМУ, NAMU)</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="header__left">
+        <a href="#menu" class="header__icon header__icon--menu"></a>
+
+        <h1 class="header__title">Художній Музей</h1>
+        <a class="header__buy-tickets buy-tickets" href="./">
+          <span class="buy-tickets__text">Квитки</span>
+          <div class="buy-tickets__arrow"></div>
+        </a>
+        <span class="header__events">Події</span>
+      </div>
+      <div class="header__right">
+        <a class="header__logo" href="./">
+          NA
+          <br>
+          MU
+        </a>
+      </div>
+    </header>
+
+    <!-- <div class="main">
+      <div class="container">1</div>
+    </div> -->
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
