--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     >
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body class="page__body">
     <!-- Header  -->
     <div class="header">
       <div class="header__wrapper">
@@ -170,6 +170,81 @@
       </div>
     </section>
     <!-- #Events -->
+
+    <!-- Gallery -->
+    <div class="gallery">
+      <div class="container">
+        <div class="gallery-slider gallery-middle">
+          <div class="gallery-slider__slides">
+            <input
+              type="radio"
+              class="gallery-slider__input"
+              name="button"
+              id="btn1"
+              checked
+            >
+            <input
+              type="radio"
+              class="gallery-slider__input"
+              name="button"
+              id="btn2"
+            >
+            <input
+              type="radio"
+              class="gallery-slider__input"
+              name="button"
+              id="btn3"
+            >
+            <input
+              type="radio"
+              class="gallery-slider__input"
+              name="button"
+              id="btn4"
+            >
+            <div class="gallery-slider__slide s1">
+              <img
+              src="./images/gallery-1.png"
+              alt="slide-1"
+              class="galery-slider__img"
+              >
+            </div>
+
+            <div class="gallery-slider__slide">
+              <img
+              src="./images/gallery-2.png"
+              alt="slide-2"
+              class="galery-slider__img"
+              >
+            </div>
+
+            <div class="gallery-slider__slide">
+              <img
+              src="./images/gallery-3.png"
+              alt="slide-3"
+              class="galery-slider__img"
+              >
+            </div>
+
+            <div class="gallery-slider__slide">
+              <img
+              src="./images/gallery-4.png"
+              alt="slide-4"
+              class="galery-slider__img"
+              >
+            </div>
+          </div>
+
+          <div class="gallery-slider__nav">
+            <label for="btn1" class="gallery-slider__btn"></label>
+            <label for="btn2" class="gallery-slider__btn"></label>
+            <label for="btn3" class="gallery-slider__btn"></label>
+            <label for="btn4" class="gallery-slider__btn"></label>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <!-- #Gallery -->
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
