--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,43 @@
   <body class="page__body">
     <header class="header">
       <div class="container">
-        <div class="header__top-action">
-          <a href="#menu__page" class="menu-button icon"></a>
-          <a href="#" class="main-logo icon"></a>
+        <div class="header__top-actions">
+          <a href="#menu__page" class="menu__icon icon"></a>
+          <a href="/" class="logo__icon icon"></a>
         </div>
       </div>
     </header>
+    <nav class="header__menu-page" id="menu__page">
+      <div class="container">
+        <div class="header__menu__top-actions">
+          <a href="#menu" class="cross__icon icon"></a>
+          <div class="menu__content">
+            <div class="menu__column">
+              <a href="#gallery" class="menu__link">Галерея</a>
+              <a href="#events" class="menu__link">Виставки та події</a>
+            </div>
+            <div class="menu__column">
+              <a href="#events" class="menu__link">Про Нас</a>
+              <a href="#contacts" class="menu__link">Контакти</a>
+            </div>
+          </div>
+        </div>
+        <div class="header__menu__schedule">
+          <p class="schedule-title">Графік роботи</p>
+          <strong class="header__menu__schedule-time">12:00-20:00</strong>
+          середа
+          <strong class="header__menu__schedule-time">12:00-20:00</strong>
+          четвер
+          <strong class="header__menu__schedule-time">12:00-20:00</strong>
+          п'ятниця
+          <strong class="header__menu__schedule-time">11:00-19:00</strong>
+          субота
+          <strong class="header__menu__schedule-time">11:00-19:00</strong>
+          неділя
+          <div class="header__menu__schedule-details"><strong>Вихідні:</strong> понеділок, вівторок. <br> Каса припиняє роботу за 1 годину до закриття музею</div>
+        </div>
+      </div>
+    </nav>
     <main>
       <section class="art-museum container" id="museum">
         <h1 class="art-museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
@@ -28,12 +59,15 @@
         </a>
       </section>
 
-
       <section class="events container" id="events">
 
         <h2 class="events__title">Актуальні події</h2>
         <div class="events-card">
-          <div class="events-card__image events-card__image-1"></div>
+          <img
+            src="./images/blocks/events/img-1.png"
+            alt="events 1"
+            class="events-card__image"
+          >
           <div class="events-card__info">
             <p class="events-card__type">ВИСТАВКА</p>
             <p class="events-card__schedule">26.08-29.11.2019</p>
@@ -42,7 +76,11 @@
           <div class="events-card__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</div>
         </div>
         <div class="events-card">
-          <div class="events-card__image events-card__image-2"></div>
+          <img
+            src="./images/blocks/events/img-2.png"
+            alt="events 1"
+            class="events-card__image"
+          >
           <div class="events-card__info">
             <p class="events-card__type">ВИСТАВКА</p>
             <p class="events-card__schedule">26.08-29.11.2019</p>
@@ -75,17 +113,17 @@
           >
           <img
             class="slider-item hiden"
-            src="./images/blocks/gallery/img-2.png"
+            src="./images/blocks/gallery/img-2__wide.jpg"
             alt="image 2"
           >
           <img
             class="slider-item hiden"
-            src="./images/blocks/gallery/img-3.png"
+            src="./images/blocks/gallery/img-3__wide.jpg"
             alt="image 3"
           >
           <img
             class="slider-item hiden"
-            src="./images/blocks/gallery/img-4.png"
+            src="./images/blocks/gallery/img-4__wide.jpg"
             alt="image 4"
           >
         </div>
@@ -118,7 +156,7 @@
     </main>
     <footer class="footer">
       <div class="footer__top-action">
-        <a href="/" class="main-logo icon"></a>
+        <a href="/" class="logo__icon icon"></a>
         <div class="social-links">
           <a
             href="https://www.facebook.com/namu.museum"
@@ -136,8 +174,8 @@
       </div>
       <div class="footer__content-wrapper">
         <div class="footer__content">
-          <div class="footer__schedule">
-            <p class="footer__schedule-title">Графік роботи</p>
+          <div class="schedule">
+            <p class="schedule-title">Графік роботи</p>
             <strong class="schedule-time">12:00-20:00</strong>
             середа
             <strong class="schedule-time">12:00-20:00</strong>
@@ -173,21 +211,21 @@
         </div>
       </div>
       <nav class="footer__menu">
-        <ul class="footer__menu-list">
-          <div class="footer__menu-column">
-            <li class="footer__menu-item">
-              <a href="#gallery" class="footer__menu-link main-link">Галерея</a>
+        <ul class="menu-list">
+          <div class="menu-column">
+            <li class="menu-item">
+              <a href="#gallery" class="menu-link main-link">Галерея</a>
             </li>
-            <li class="footer__menu-item">
-              <a href="#events" class="footer__menu-link">Виставки та події</a>
+            <li class="menu-item">
+              <a href="#events" class="menu-link">Виставки та події</a>
             </li>
           </div>
-          <div class="footer__menu-column">
-            <li class="footer__menu-item">
-              <a href="#" class="footer__menu-link">Про нас</a>
+          <div class="menu-column">
+            <li class="menu-item">
+              <a href="#" class="menu-link">Про нас</a>
             </li>
-            <li class="footer__menu-item">
-              <a href="#contacts" class="footer__menu-link">Контакти</a>
+            <li class="menu-item">
+              <a href="#contacts" class="menu-link">Контакти</a>
             </li>
           </div>
         </ul>
