--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,301 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="body">
+    <header class="header">
+      <div class="header__navigation">
+        <div class="header__nav-container">
+          <a href="#menu" class="header__nav"></a>
+          <div class="header__nav-logo">
+            NA <br>
+            MU
+          </div>
+        </div>
+      </div>
+
+      <div class="header__navigation-image">
+        <div class="header__introduction">
+          <div class="header__image"></div>
+        </div>
+      </div>
+      <div class="header__navigation-content">
+        <h1 class="header__nav-title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+        <a href="#" class="header__nav-button">
+          Квитки
+          <div class="header__arrow-left"></div>
+        </a>
+
+        <div class="header__ticket-box">
+          <div class="header__ticket-line"></div>
+          <p class="header__ticket-text">Події</p>
+        </div>
+      </div>
+    </header>
+
+    <aside id="menu" class="menu">
+      <div class="menu__content">
+        <div class="menu__nav">
+          <a href="#" class="menu__close"></a>
+
+          <div class="menu__grid-menu">
+            <a href="#galery" class="menu__grid-link">Галерея</a>
+            <a href="#about-us" class="menu__grid-link">Про нас</a>
+            <a href="#events" class="menu__grid-link">Виставки та події</a>
+            <a href="#contact" class="menu__grid-link">Контакти</a>
+          </div>
+        </div>
+
+        <div class="menu__schedule">
+          <h4 class="menu__schedule-title">Графік роботи</h4>
+
+          <div class="menu__schedule-box">
+            <div class="menu__schedule-box-date">
+
+              <p class="menu__schedule-info">
+                <span class="menu__schedule-info menu__schedule-info--bold">12:00 — 20:00</span>
+                середа
+              </p>
+              <p class="menu__schedule-info">
+                <span class="menu__schedule-info menu__schedule-info--bold">12:00 — 20:00</span>
+                четвер
+              </p>
+              <p class="menu__schedule-info">
+                <span class="menu__schedule-info menu__schedule-info--bold">12:00 — 20:00</span>
+                п'ятниця
+              </p>
+              <p class="menu__schedule-info">
+                <span class="menu__schedule-info menu__schedule-info--bold">11:00 — 19:00</span>
+                субота
+              </p>
+              <p class="menu__schedule-info">
+                <span class="menu__schedule-info menu__schedule-info--bold">11:00 — 19:00</span>
+                неділя
+              </p>
+            </div>
+
+            <span class="menu__non-obliged"><br><br></span>
+
+            <div class="menu__schedule-description">
+              <p class="menu__schedule-info menu__schedule-info--description">
+                <span class=" menu__schedule-info--bold">Вихідні:</span>
+                понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main id="about-us" class="main">
+      <section id="events" class="main__section main__section--event">
+        <h1 class="main__title">Актуальні події</h1>
+        <div class="main__events">
+          <div class="main__event">
+            <img src="./images/events/event2.1.png" alt="event"
+            class="main__event-image">
+
+            <div class="main__event-box">
+              <div class="main__event-type">
+                <h3 class="main__event-title">Виставка</h3>
+                <h3 class="main__event-time">26.08-29.11.2019</h3>
+              </div>
+
+              <h2 class="main__event-name">Йду і повертаюсь</h2>
+
+              <p class="main__event-description">Національний Художній Музей України презентує унікальну частину колекції
+                Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+
+          </div>
+
+          <div class="main__event">
+            <img src="./images/events/event2.2.png" alt="event"
+            class="main__event-image">
+
+            <div class="main__event-box">
+              <div class="main__event-type">
+                <h3 class="main__event-title">Виставка</h3>
+                <h3 class="main__event-time">26.08-29.11.2019</h3>
+              </div>
+
+              <h2 class="main__event-name">І спогади і мрії</h2>
+
+              <p class="main__event-description">Національний художній музей України до 100 річчя від дня народження видатної
+                української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+
+          <div class="main__lection">
+            <img src="./images/lections/Lection-tablet.png" alt="lection-image"
+            class="main__lection-image">
+            <div class="main__lection-box">
+              <div class="main__lection-container">
+                <div class="main__event-type main__event-type--no-margin-vertical">
+                  <h3 class="main__event-title">ЛЕКЦІЯ</h3>
+                  <h3 class="main__event-time">26/08/2019 - 11:00</h3>
+                </div>
+
+                <h2 class="main__event-name main__event-name--without-after">Від класицизму до романтизму</h2>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="galery" class="main__section">
+        <h1 class="main__title">Галерея</h1>
+
+        <div class="main__images main__images--carousel">
+          <div class="main__image-box-slider">
+            <img src="./images/galery/Slider2.2.png" alt="galery"
+            class="main__image">
+          </div>
+
+          <div class="main__image-box-slider">
+            <img src="./images/galery/Slider2.1.png" alt="galery"
+            class="main__image">
+          </div>
+
+          <div class="main__image-box-slider">
+            <img src="./images/galery/Slider2.2.png" alt="galery"
+            class="main__image">
+          </div>
+
+          <div class="main__image-box-slider">
+            <img src="./images/galery/Slider2.1.png" alt="galery"
+            class="main__image">
+          </div>
+        </div>
+
+        <div class="main__images main__images--no-carousel">
+          <div class="main__image-box-slider main__image-box-slider--smaller">
+            <img src="./images/galery/galery3.1.png" alt="galery"
+            class="main__image">
+          </div>
+
+          <div class="main__image-box-slider main__image-box-slider--bigger">
+            <img src="./images/galery/galery3.2.png" alt="galery"
+            class="main__image">
+          </div>
+
+          <div class="main__image-box-slider main__image-box-slider--bigger-low">
+            <img src="./images/galery/galery3.3.png" alt="galery"
+            class="main__image">
+          </div>
+
+          <div class="main__image-box-slider main__image-box-slider--smaller-low">
+            <img src="./images/galery/galery3.4.png" alt="galery"
+            class="main__image">
+          </div>
+        </div>
+
+        <div class="main__points">
+          <div class="main__point main__point--active"></div>
+          <div class="main__point"></div>
+          <div class="main__point"></div>
+          <div class="main__point"></div>
+        </div>
+      </section>
+
+      <section id="contact" class="main__section main__section--subscribe">
+        <div class="main__subscribe">
+          <h1 class="main__subscribe-title">Підписка</h1>
+
+          <p class="main__subscribe-description">Бути в курсі всіх актуальних подій та останніх новин.</p>
+
+          <form id="email-form"
+           class="main__nav-button">
+            <input type="email" placeholder="E-mail"
+            class="main__nav-email" name="email">
+            <button type="submit"  class="main__arrow">
+              <div class="main__arrow-left"></div>
+            </button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <section class="footer__social">
+        <a href="#" class="footer__logo">NA<br>MU</a>
+
+        <div class="footer__medias">
+          <a href="https://facebook.com" class="footer__media footer__media--facebook"></a>
+          <a href="https://instagram.com" class="footer__media footer__media--instagram"></a>
+        </div>
+      </section>
+
+      <section class="footer__info">
+        <div class="footer__schedule">
+          <h4 class="footer__schedule-title">Графік роботи</h4>
+
+          <p class="footer__schedule-info">
+            <span class="footer__schedule-info footer__schedule-info--bold">12:00 — 20:00</span>
+            середа
+          </p>
+          <p class="footer__schedule-info">
+            <span class="footer__schedule-info footer__schedule-info--bold">12:00 — 20:00</span>
+            четвер
+          </p>
+          <p class="footer__schedule-info">
+            <span class="footer__schedule-info footer__schedule-info--bold">12:00 — 20:00</span>
+            п'ятниця
+          </p>
+          <p class="footer__schedule-info">
+            <span class="footer__schedule-info footer__schedule-info--bold">11:00 — 19:00</span>
+            субота
+          </p>
+          <p class="footer__schedule-info">
+            <span class="footer__schedule-info footer__schedule-info--bold">11:00 — 19:00</span>
+            неділя
+          </p>
+
+          <br><br>
+
+          <p class="footer__schedule-info footer__schedule-info--description">
+            <span class=" footer__schedule-info--bold">Вихідні:</span>
+            понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+
+        <div class="footer__contacts">
+          <h4 class="footer__schedule-title">Контакти:</h4>
+
+          <a href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4494397,30.5307593,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?entry=ttu" class="footer__contact-link">вул. М. Грушевського, 6; Київ, 01001</a>
+          <a href="tel:044-278-13-57" class="footer__contact-link">тел. +38 (044) 278-13-57</a>
+          <a href="fax:044-278-74-54" class="footer__contact-link">факс +38 (044) 278-74-54</a>
+          <a href="mailto:info@namu.kiev.ua" class="footer__contact-link">e-mail: info@namu.kiev.ua</a>
+        </div>
+
+        <a href="#" class="footer__arrow-up"></a>
+      </section>
+
+      <section class="footer__navigation">
+        <div class="footer__nav">
+          <a href="#galery" class="footer__nav-link">Галерея</a>
+          <a href="#about-us" class="footer__nav-link">Про нас</a>
+          <a href="#events" class="footer__nav-link">Виставки та події</a>
+          <a href="#contact" class="footer__nav-link">Контакти</a>
+        </div>
+      </section>
+
+      <section class="footer__copy">
+        <h3 class="footer__author">Designed by Zhyriada Marina</h3>
+        <h3 class="footer__author">Copyright © 2019. All Rights Reserved.</h3>
+      </section>
+    </footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
