Load museum. take1

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum NAMU</title>
     <link rel="icon" href="./images/fav-icon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -235,8 +235,10 @@
         <a href="#" class="footer__logo">NA<br>MU</a>
 
         <div class="footer__medias">
-          <a href="https://facebook.com" class="footer__media footer__media--facebook"></a>
-          <a href="https://instagram.com" class="footer__media footer__media--instagram"></a>
+          <a href="https://facebook.com" target="_blank"
+            class="footer__media footer__media--facebook"></a>
+          <a href="https://instagram.com" target="_blank"
+            class="footer__media footer__media--instagram"></a>
         </div>
       </section>
 
