--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,10 @@
                     <p class="block__event-type">Вистава</p>
                     <p class="block__when">26.08-29.11.2019</p>
                   </div>
-                  <h3 class="block__title">Йду і повертаюсь</h3>
+                  <div class="block__title-box">
+                    <h3 class="block__title">Йду і повертаюсь</h3>
+                    <div class="block__title-square"></div>
+                  </div>
                   <p class="block__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
                 </div>
               </article>
@@ -124,7 +127,11 @@
                     <p class="block__event-type">Вистава</p>
                     <p class="block__when">26.08-29.11.2019</p>
                   </div>
-                  <h3 class="block__title">І спогади і мрії</h3>
+                  <div class="block__title-box">
+                    <h3 class="block__title">І спогади і мрії</h3>
+                    <div class="block__title-square"></div>
+                  </div>
+
                   <p class="block__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
                 </div>
               </article>
@@ -250,8 +257,6 @@
 
     </main>
 
-    <a href="#page-top" class="go-back"></a>
-
     <footer class="footer">
       <div class="container">
         <div class="footer__content">
@@ -275,6 +280,10 @@
                   target="_blank"
                   >
                 </a>
+
+                <div class="footer__go-back">
+                  <a href="#page-top" class="go-back"></a>
+                </div>
               </div>
             </div>
             <div class="footer__information">
@@ -371,7 +380,7 @@
         </div>
         <div class="footer__desighn-info">
           <p>Designed by Zhyriada Marina</p>
-          <p>Copyright &copy; 2019. All Rights Reserved.</p>
+          <p>Copyright &copy; 2023. All Rights Reserved.</p>
         </div>
       </div>
     </footer>
