fixed last commits

--- a/src/index.html
+++ b/src/index.html
@@ -285,7 +285,7 @@
         </div>
       </div>
       <div class="controls">
-        <button class="next-btn">></button>
+        <button class="next-btn"></button>
       </div>
       <img
         src="./images/photo-5.png"
@@ -303,7 +303,7 @@
         alt="опис фото"
       >
       <div class="controls">
-        <button class="prev-btn"><</button>
+        <button class="prev-btn"></button>
       </div>
     </section>
 
@@ -326,6 +326,7 @@
             name="email"
             placeholder="E-mail"
             class="subscription__email"
+            autocomplete="off"
           >
 
           <button
@@ -443,7 +444,7 @@
           </p>
 
           <p class="footer__p">
-            <a href="tel:+38 (044) 278-74-54" class="link footer__day">
+            <a href="tel:+38(044)-278-74-54" class="link footer__day">
               факс +38 (044) 278-74-54 <br>
             </a>
           </p>
@@ -493,7 +494,7 @@
             </a>
           </p>
           <p class="footer__text">
-            <a href="#menu-id" class="link footer__day">
+            <a href="#footer-id" class="link footer__day">
               Контакти
             </a>
           </p>
