created subscribe block

--- a/src/index.html
+++ b/src/index.html
@@ -205,7 +205,7 @@
               <img
               src="./images/gallery-1.png"
               alt="slide-1"
-              class="galery-slider__img"
+              class="gallery-slider__img"
               >
             </div>
 
@@ -213,7 +213,7 @@
               <img
               src="./images/gallery-2.png"
               alt="slide-2"
-              class="galery-slider__img"
+              class="gallery-slider__img"
               >
             </div>
 
@@ -229,22 +229,43 @@
               <img
               src="./images/gallery-4.png"
               alt="slide-4"
-              class="galery-slider__img"
+              class="gallery-slider__img"
               >
             </div>
           </div>
-
-          <div class="gallery-slider__nav">
-            <label for="btn1" class="gallery-slider__btn"></label>
-            <label for="btn2" class="gallery-slider__btn"></label>
-            <label for="btn3" class="gallery-slider__btn"></label>
-            <label for="btn4" class="gallery-slider__btn"></label>
-          </div>
-
         </div>
+      </div>
+      <div class="gallery-slider__nav">
+        <!-- <div class="epta"> -->
+        <label for="btn1" class="gallery-slider__btn"></label>
+        <label for="btn2" class="gallery-slider__btn"></label>
+        <label for="btn3" class="gallery-slider__btn"></label>
+        <label for="btn4" class="gallery-slider__btn"></label>
+        <!-- </div> -->
       </div>
     </div>
     <!-- #Gallery -->
+
+    <!-- Subscribe -->
+    <section class="subscribe">
+      <div class="container">
+        <div class="subscribe__wrapper">
+          <h2 class="subscribe__title">Підписка</h2>
+          <p class="subscribe__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          <form action="#" class="subscribe__form">
+            <label for="input" class="form__label"></label>
+            <input
+              type="text"
+              class="subscribe__input"
+              id="input"
+              placeholder="email"
+            >
+            <button class="subscribe__btn">></button>
+          </form>
+        </div>
+      </div>
+    </section>
+    <!-- #Subscribe -->
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
