fixed last commits

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="./images/favicon.img"
+      href="./images/favicon1.ico"
     >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
