fixed slider & finished landing

--- a/src/index.html
+++ b/src/index.html
@@ -180,7 +180,7 @@
     <div class="gallery" id="gallery">
       <div class="container">
         <div class="gallery__slides">
-          <div class="gallery__slide">
+          <div class="gallery__slide gallery__slide-1">
             <img
             src="./images/gallery-1.png"
             alt="slide-1"
@@ -188,7 +188,7 @@
             >
           </div>
 
-          <div class="gallery__slide">
+          <div class="gallery__slide gallery__slide-2">
             <img
             src="./images/gallery-2.png"
             alt="slide-2"
@@ -196,15 +196,15 @@
             >
           </div>
 
-          <div class="gallery__slide">
+          <div class="gallery__slide gallery__slide-3">
             <img
             src="./images/gallery-3.png"
             alt="slide-3"
-            class="gallery-slider__img gallery__img-3"
+            class="gallery__img gallery__img-3"
             >
           </div>
 
-          <div class="gallery__slide">
+          <div class="gallery__slide gallery__slide-4">
             <img
             src="./images/gallery-4.png"
             alt="slide-4"
@@ -229,10 +229,14 @@
         <div class="subscribe__wrapper">
           <h2 class="subscribe__title">Підписка</h2>
           <p class="subscribe__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
-          <form action="#" class="subscribe__form">
+          <form
+            action="#"
+            class="subscribe__form"
+            onsubmit="this.reset(); return false;"
+          >
             <label for="input" class="form__label"></label>
             <input
-              type="text"
+              type="email"
               class="subscribe__input"
               id="input"
               placeholder="email"
@@ -302,7 +306,7 @@
                   </span>
                 </p>
               </div>
-              <div class="footer__contacts">
+              <div class="footer__contacts" id="contacts">
                 <h4 class="footer__contacts-title">Контакти:</h4>
                 <div class="footer__info">
                   <a
