add href prop on contact-us fields

--- a/src/index.html
+++ b/src/index.html
@@ -232,7 +232,7 @@
         </div>
       </div>
 
-      <div class="middle__column column--1">
+      <div class="footer-column footer-column--1">
         <p class="footer-column__title">Графік роботи</p>
         <div class="footer-column__content">
           <ul class="schedule__days">
@@ -275,12 +275,25 @@
         </div>
       </div>
 
-      <div class="middle__column column--2">
+      <div class="footer-column footer-column--2">
         <p class="footer-column__title">Контакти:</p>
-        <p class="footer-column__content">
-          вул. М. Грушевського, 6; Київ, 01001<br>
-          тел. +38 (044) 278-13-57<br>
-          факс +38 (044) 278-74-54 <br>e-mail: info@namu.kiev.ua
+        <p class="footer-column__contact-us contact-us">
+          <a
+            class="contact-us__link"
+            href="https://maps.app.goo.gl/PL9JMTs8uXuAbAeW7"
+            target="_blank"
+          >
+            вул. М. Грушевського, 6; Київ, 01001
+          </a>
+          <a class="contact-us__link" href="tel:+380442781357">
+            тел. +38 (044) 278-13-57
+          </a>
+          <a class="contact-us__link" href="fax:+380442787454">
+            факс +38 (044) 278-74-54
+          </a>
+          <a class="contact-us__link" href="mailto:info@namu.kiev.ua">
+            e-mail: info@namu.kiev.ua
+          </a>
         </p>
       </div>
 
