--- a/src/index.html
+++ b/src/index.html
@@ -339,7 +339,7 @@
               <a href="#about" class="footer-nav__link">Про Нас</a>
             </li>
             <li class="footer-nav__item">
-              <a href="#events" class="footer-nav__link">Виставки та <br>події</br></a>
+              <a href="#events" class="footer-nav__link">Виставки та події</a>
             </li>
             <li class="footer-nav__item">
               <a href="#contacts" class="footer-nav__link">Контакти</a>
