footer link hover, form reload

--- a/src/index.html
+++ b/src/index.html
@@ -194,8 +194,12 @@
       </div>
     </section>
 
-    <section class="section section__subscribe" id="about-us">
-      <form action="#" class="subscribe__form form">
+    <section class="section section__subscribe" id="about-us" >
+      <form
+        action="#"
+        onsubmit="document.querySelector('.form__email').value = '';return false"
+        class="subscribe__form form"
+      >a
         <h3 class="form__title">Підписка</h3>
         <p class="form__description">
           Бути в курсі всіх актуальних подій та останніх новин.
@@ -206,7 +210,7 @@
             class="form__email"
             placeholder="E-mail"
             required
-         >
+          >
           <button class="form__send-btn"></button>
         </div>
       </form>
