--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,7 @@
     >
   </head>
   <body class="page__body">
-    <!-- Header  -->
-    <div class="header">
+    <header class="header">
       <div class="header__wrapper">
         <div class="header-bg">
           <img
@@ -40,7 +39,8 @@
         </a>
 
         <div class="header__content">
-          <h1 class="header__content-title">ХУДОЖНІЙ
+          <h1 class="header__content-title">
+            ХУДОЖНІЙ
             <br>
             МУЗЕЙ
           </h1>
@@ -55,10 +55,8 @@
           <a href="#events" class="header__content-line">події</a>
         </div>
       </div>
-    </div>
-    <!-- #Header  -->
+    </header>
 
-    <!--Aside  -->
     <aside class="menu page__menu" id="menu">
       <div class="menu__wrapper">
         <div class="menu-top">
@@ -109,9 +107,7 @@
         </div>
       </div>
     </aside>
-    <!--#Aside  -->
 
-    <!-- Events -->
     <section class="events" id="events">
       <div class="container">
         <h2 class="events-title title">Актуальні події</h2>
@@ -174,41 +170,39 @@
         </div>
       </div>
     </section>
-    <!-- #Events -->
 
-    <!-- Gallery -->
-    <div class="gallery" id="gallery">
+    <section class="gallery" id="gallery">
       <div class="container">
         <div class="gallery__slides">
           <div class="gallery__slide gallery__slide-1">
             <img
-            src="./images/gallery-1.png"
-            alt="slide-1"
-            class="gallery__img"
+              src="./images/gallery-1.png"
+              alt="slide-1"
+              class="gallery__img"
             >
           </div>
 
           <div class="gallery__slide gallery__slide-2">
             <img
-            src="./images/gallery-2.png"
-            alt="slide-2"
-            class="gallery__img gallery__img-2"
+              src="./images/gallery-2.png"
+              alt="slide-2"
+              class="gallery__img gallery__img-2"
             >
           </div>
 
           <div class="gallery__slide gallery__slide-3">
             <img
-            src="./images/gallery-3.png"
-            alt="slide-3"
-            class="gallery__img gallery__img-3"
+              src="./images/gallery-3.png"
+              alt="slide-3"
+              class="gallery__img gallery__img-3"
             >
           </div>
 
           <div class="gallery__slide gallery__slide-4">
             <img
-            src="./images/gallery-4.png"
-            alt="slide-4"
-            class="gallery__img gallery__img-4"
+              src="./images/gallery-4.png"
+              alt="slide-4"
+              class="gallery__img gallery__img-4"
             >
           </div>
 
@@ -220,10 +214,8 @@
           <div class="gallery__nav-btn"></div>
         </div>
       </div>
-    </div>
-    <!-- #Gallery -->
+    </section>
 
-    <!-- Subscribe -->
     <section class="subscribe" id="about">
       <div class="container">
         <div class="subscribe__wrapper">
@@ -246,10 +238,8 @@
         </div>
       </div>
     </section>
-    <!-- #Subscribe -->
 
-    <!-- Footer -->
-    <section class="footer">
+    <footer class="footer">
       <div class="container">
         <div class="footer__inner">
           <div class="footer__wrapper">
@@ -352,8 +342,7 @@
           <p class="footer__rights-text">Designed by Zhyriada Marina</p>
         </div>
       </div>
-    </section>
-    <!-- #Footer -->
+    </footer>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
