--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Національний художній музей України (НХМУ, NAMU)</title>
+    <title>NAMU</title>
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -27,7 +27,7 @@
         <span class="header__events">Події</span>
       </div>
       <div class="header__right">
-        <a class="header__logo" href="./">
+        <a class="header__logo" href="#">
           NA
           <br>
           MU
@@ -217,7 +217,7 @@
     </section>
     <footer class="footer" id="contacts">
       <div class="footer__top">
-        <a class="footer__logo" href="./">
+        <a class="footer__logo" href="#">
           NA
           <br>
           MU
@@ -292,7 +292,7 @@
           <a class="contact-us__link" href="tel:+380442781357">
             тел. +38 (044) 278-13-57
           </a>
-          <a class="contact-us__link" href="fax:+380442787454">
+          <a class="contact-us__link" href="tel:+380442787454">
             факс +38 (044) 278-74-54
           </a>
           <a class="contact-us__link" href="mailto:info@namu.kiev.ua">
