--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Museum</title>
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/index.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link
@@ -35,7 +35,11 @@
         </div>
 
         <a href="#menu" class="header__menu">
-          <img src="./icons/menu.png" alt="menu">
+          <img
+            src="./icons/menu.png"
+            alt="menu"
+            class="header__menu-btn"
+          >
         </a>
 
         <div class="header__content">
@@ -110,7 +114,7 @@
 
     <section class="events" id="events">
       <div class="container">
-        <h2 class="events-title title">Актуальні події</h2>
+        <h2 class="title">Актуальні події</h2>
         <div class="events-cards">
           <div class="events-card">
             <img
@@ -173,6 +177,7 @@
 
     <section class="gallery" id="gallery">
       <div class="container">
+        <h2 class="title">Галерея</h2>
         <div class="gallery__slides">
           <div class="gallery__slide gallery__slide-1">
             <img
@@ -232,6 +237,7 @@
               class="subscribe__input"
               id="input"
               placeholder="email"
+              required
             >
             <button class="subscribe__btn">></button>
           </form>
@@ -253,7 +259,7 @@
               </a>
               <div class="footer__icons">
                 <a
-                  href="https://www.facebook.com/"
+                  href="https://www.facebook.com/namu.museum/?locale=uk_UA"
                   class="footer__icons-link"
                   target="_blank"
                 >
@@ -264,7 +270,7 @@
                   >
                 </a>
                 <a
-                  href="https://www.instagram.com/"
+                  href="https://www.instagram.com/namu.museum/"
                   class="footer__icons-link"
                   target="_blank"
                 >
