favicon, hovers, container

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
    >
     <link
       rel="icon"
-      href="/src/images/favicon.ico"
+      href="/src/images/favicon.png"
       type="image/x-icon">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
@@ -292,7 +292,7 @@
           <a class="contact-us__link" href="tel:+380442781357">
             тел. +38 (044) 278-13-57
           </a>
-          <a class="contact-us__link" href="tel:+380442787454">
+          <a class="contact-us__link" href="fax:+380442787454">
             факс +38 (044) 278-74-54
           </a>
           <a class="contact-us__link" href="mailto:info@namu.kiev.ua">
@@ -328,7 +328,7 @@
 
       <div class="footer__bottom">
         <p class="footer__copyright">Designed by Zhyriada Marina</p>
-        <p class="footer__copyright">Copyright © 2019. All Rights Reserved.</p>
+        <p class="footer__copyright">Copyright © 2023. All Rights Reserved.</p>
       </div>
     </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
