--- a/src/index.html
+++ b/src/index.html
@@ -181,7 +181,7 @@
         <div class="gallery__slides">
           <div class="gallery__slide gallery__slide-1">
             <img
-              src="./images/gallery-1.png"
+              src="./images/gallery-1.jpg"
               alt="slide-1"
               class="gallery__img"
             >
@@ -189,7 +189,7 @@
 
           <div class="gallery__slide gallery__slide-2">
             <img
-              src="./images/gallery-2.png"
+              src="./images/gallery-2.jpg"
               alt="slide-2"
               class="gallery__img gallery__img-2"
             >
@@ -197,7 +197,7 @@
 
           <div class="gallery__slide gallery__slide-3">
             <img
-              src="./images/gallery-3.png"
+              src="./images/gallery-3.jpg"
               alt="slide-3"
               class="gallery__img gallery__img-3"
             >
@@ -205,7 +205,7 @@
 
           <div class="gallery__slide gallery__slide-4">
             <img
-              src="./images/gallery-4.png"
+              src="./images/gallery-4.jpg"
               alt="slide-4"
               class="gallery__img gallery__img-4"
             >
