fixed last commits

--- a/src/index.html
+++ b/src/index.html
@@ -328,6 +328,7 @@
             placeholder="E-mail"
             class="subscription__email"
             autocomplete="off"
+            required
           >
 
           <button
