social hover, image, header padding

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         <a href="#menu" class="icon icon--menu"></a>
 
         <h1 class="header__title">Художній Музей</h1>
-        <a class="header__buy-tickets buy-tickets" href="./">
+        <a class="header__buy-tickets buy-tickets" href="#">
           <span class="buy-tickets__text">Квитки</span>
           <div class="buy-tickets__arrow"></div>
         </a>
