--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <header class="header" id="header-id">
       <div class="header__container">
         <a
-          href="header-id"
+          href="https://namu.kiev.ua/ua/"
           class="link"
         >
           <p class="header__logo">
@@ -349,7 +349,7 @@
     <footer class="footer" id="footer-id">
       <div class="footer__container">
         <p class="footer__logo">
-          <a href="#header-id" class="link">
+          <a href="https://namu.kiev.ua/ua/" class="link">
             NA <br> MU
           </a>
         </p>
@@ -381,7 +381,7 @@
                 src="./images/photo-inst.png"
                 class="footer__inst"
                 alt="опис фото"
-              >
+             >
             </a>
           </p>
         </div>
