--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
    >
     <link
       rel="icon"
-      href="/src/images/favicon.png"
+      href="/src/images/favicon.ico"
       type="image/x-icon">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
@@ -26,12 +26,12 @@
         </a>
         <span class="header__events">Події</span>
       </div>
+      <a class="header__logo" href="#">
+        NA
+        <br>
+        MU
+      </a>
       <div class="header__right">
-        <a class="header__logo" href="#">
-          NA
-          <br>
-          MU
-        </a>
       </div>
     </header>
 
@@ -199,7 +199,7 @@
         action="#"
         onsubmit="document.querySelector('.form__email').value = '';return false"
         class="subscribe__form form"
-      >a
+      >
         <h3 class="form__title">Підписка</h3>
         <p class="form__description">
           Бути в курсі всіх актуальних подій та останніх новин.
