fixed last commits

--- a/src/index.html
+++ b/src/index.html
@@ -349,7 +349,7 @@
     <footer class="footer" id="footer-id">
       <div class="footer__container">
         <p class="footer__logo">
-          <a href="https://namu.kiev.ua/ua/" class="link">
+          <a href="#header-id" class="link">
             NA <br> MU
           </a>
         </p>
@@ -464,7 +464,7 @@
         class="footer__item"
       >
         <img
-          src="./images/стрілка.png"
+          src="./images/arrow.png"
           class="footer__img"
           alt ="опис фото"
         >
